feat get life test tracking
