# api/handlers/traceability/models.go
@@ -1,6 +1,7 @@
 package traceability
 
 import (
+	"check-id-api/pkg/auth/life_test"
 	"check-id-api/pkg/trx/traceability"
 )
 
@@ -10,4 +11,12 @@ type resTraceability struct {
 	Code  int                          `json:"code"`
 	Type  int                          `json:"type"`
 	Msg   string                       `json:"msg"`
+}
+
+type ResTrxLifeTest struct {
+	Error bool                  `json:"error"`
+	Data  []*life_test.LifeTest `json:"data"`
+	Code  int                   `json:"code"`
+	Type  int                   `json:"type"`
+	Msg   string                `json:"msg"`
 }
