# docs/swagger.json
@@ -315,6 +315,39 @@
                 }
             }
         },
+        "/api/v1/traceability/life-test": {
+            "get": {
+                "description": "Obtención del historial de validaciones de identidad de un usuario por su id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Traceability"
+                ],
+                "summary": "Obtención del historial de validaciones de identidad de un usuario por su id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd access token here\u003e",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/traceability.ResTrxLifeTest"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/user": {
             "get": {
                 "description": "Método para obtener los datos registrados del usuario",
@@ -722,6 +755,38 @@
                 }
             }
         },
+        "life_test.LifeTest": {
+            "type": "object",
+            "properties": {
+                "client_id": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "expired_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "max_num_test": {
+                    "type": "integer"
+                },
+                "request_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "onboarding.ReqUploadSelfie": {
             "type": "object",
             "properties": {
@@ -831,6 +896,29 @@
                 },
                 "data": {
                     "$ref": "#/definitions/check-id-api_api_handlers_onboarding.Onboarding"
+                },
+                "error": {
+                    "type": "boolean"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                }
+            }
+        },
+        "traceability.ResTrxLifeTest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/life_test.LifeTest"
+                    }
                 },
                 "error": {
                     "type": "boolean"
